# Lexipyalgos

./: .gitignore  README.md  example_convexity.py  pyproject.toml  quickstart.py
abstract_convexity/: __init__.py  applications.py  core.py  enumeration.py  exceptions.py  oeis.py  transform.py
tests/: conftest.py  test_applications.py  test_convexity.py  test_core.py  test_enumeration.py  test_oeis.py  test_transform.py
